--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,42 @@
 # Compiled class file
 *.class
 
+.gradle/
+build/
+!gradle/wrapper/gradle-wrapper.jar
+
+### STS ###
+
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+
+### IntelliJ IDEA ###
+
+.idea*
+.iws*
+.iml*
+.ipr/
+out/
+
+
+
+### NetBeans ###
+
+/nbproject/private/
+
+/nbbuild/
+
+/dist/
+
+/nbdist/
+
+/.nb-gradle/
+
 # Log file
 *.log
 
